--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -1,10 +1,28 @@
 name: Rails
-on: push
+permissions: write-all
+
+on:
+  push:
+    branches: [master]
+  pull_request:
+  merge_group:
+
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  verify:
-    name: Build
+  unit:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+
+    strategy:
+      fail-fast: false
+      matrix:
+        ci_node_total: [16]
+        ci_node_index: [1, 2]
+
+    name: "unit #${{ matrix.ci_node_index }}"
 
     services:
       postgres:
