--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1.170.0
         with:
-          ruby-version: 2.6.x
+          ruby-version: 2.6
       - name: Set up Node
         uses: actions/setup-node@v1
         with:
