--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -50,17 +50,17 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1.170.0
         with:
-          ruby-version: 2.6
-      - name: Set up Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 10.13.0
+          ruby-version: 3.0
+      # - name: Set up Node
+      #   uses: actions/setup-node@v1
+      #   with:
+      #     node-version: 10.13.0
       - name: Install dependencies
         run: |
           sudo apt-get -yqq install libpq-dev build-essential libcurl4-openssl-dev
           gem install bundler
           bundle install --jobs 4 --retry 3
-          yarn install
+          # yarn install
       - name: Setup test database
         env:
           RAILS_ENV: test
